--- a/DontBeHumble.Camera.asmdef
+++ b/DontBeHumble.Camera.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:dcc8bc53dd4945e1b7af1af5066d71cf",
         "GUID:c152e988d447c8a44b8541cd59723bf8",
-        "GUID:4307f53044263cf4b835bd812fc161a4"
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
